audit: apply user/seller WEB security remediation (hs)
HttpOnly cookie auth, JWT subject binding, access control, PII masking, secret validation, CORS hardening, Redis auth, error sanitization, and related backend fixes for security audit remediation.

Co-authored-by: Cursor <cursoragent@cursor.com>